--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "api/ask.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/ask", "dest": "api/ask.js" }
   ]
 }
