--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mirror-ai-backend",
+  "name": "mirror-ai",
   "version": "1.0.0",
-  "type": "module",
+  "main": "api/ask.js",
   "dependencies": {
-    "@google/generative-ai": "^0.5.0"
+    "@google/generative-ai": "^0.8.0"
   }
 }
