--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirror-ai",
   "version": "1.0.0",
-  "main": "api/ask.js",
+  "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.8.0"
   }
